// Copyright 2020 Harri @ OP Techlab.
//

syntax = "proto3";

import "protocol.proto";

option go_package = "github.com/findy-network/findy-agent-api/grpc/agency";

package agency;

/*
Agent is a service to communicate with your cloud agent.
 */
service Agent {
  // Listen is async function to stream AgentStatus. ClientID must be unique.
  rpc Listen(ClientID) returns (stream AgentStatus) {}

  // Give is function to give answer to ACTION_NEEDED_xx notifications.
  rpc Give(Answer) returns (ClientID) {}

  rpc CreateInvitation(InvitationBase) returns (Invitation) {}

  rpc SetImplId(SAImplementation) returns (SAImplementation) {}

  rpc Ping(PingMsg) returns (PingMsg) {}

  rpc CreateSchema(SchemaCreate) returns (Schema) {}
  rpc CreateCredDef(CredDefCreate) returns (CredDef) {}

  rpc GetSchema(Schema) returns (SchemaData) {}
  rpc GetCredDef(CredDef) returns (CredDefData) {}
}

message SchemaData {
  string id = 1;
  string data = 2;
}

message CredDefData {
  string id = 1;
  string data = 2;
}

message SchemaCreate {
  string name = 1;
  string version = 2;
  repeated string attrs = 3;
}

message Schema {
  string id = 1;
}

message CredDefCreate {
  string schema_id = 1;
  string tag = 2;
}

message CredDef {
  string id = 1;
}

message PingMsg {
  int32 id = 1;
  bool ping_controller = 2;
}

message SAImplementation {
  string id = 1;
  string endpoint = 2;
  string key = 3;
  bool persistent = 4;
}

message InvitationBase {
  string label = 1;
  string id = 2;
  int64 expiration = 3; // not implemented yet
}

message Invitation {
  string json_str = 1;
  string url = 2; // not implemented yet
}

/*
Answer is a message send by Give function of Agent service.
 */
message Answer {
  string id = 1; // Same as Notification ID (UUID)
  ClientID client_id = 2; // Same as your ClientID when Listening was started
  bool ack = 3; // Your response to the protocol question
  string info = 4; // General info, mostly used for debugging
}

// ClientID is UUID. If user has many different client device connected to
// cloud agent it must identify who is talking to.
message ClientID {
  string id = 1; // UUID of the client
}

/*
AgentStatus is a message identifying current agent events returned as
notifications.
 */
message AgentStatus {
  ClientID client_id = 1; // UUID of the client listening
  Notification notification = 3; // The actual Notification message
}

/*
Notification is a message used to tell meaningful events outside from cloud
agent.
 */
message Notification {
  // Type is enum type to tell what happening
  enum Type {
    STATUS_UPDATE = 0; // General status update where no action needed
    ACTION_NEEDED = 1; // General action needed update notification
    ANSWER_NEEDED_PING = 2; // Your CA controller has been pinged
    ANSWER_NEEDED_ISSUE_PROPOSE = 3; // Issuing is proposed
    ANSWER_NEEDED_PROOF_PROPOSE = 4; // Proof is proposed
    ANSWER_NEEDED_PROOF_VERIFY = 5; // During proof values need to be verified
    KEEPALIVE = 6; // To prevent network idle to shut us down 
  }
  Type type_id = 1; // Notification type, see Type

  string id = 2; // Notification's unique ID
  string connection_id = 3; // Current pairwise ID between agents
  string protocol_id = 4; // Current protocol ID, see Aries Thread ID
  string protocol_family = 5; // Text version of the protocol family/namespace
  int64 timestamp = 6; // timestamp in nano because this is part of the key
  Protocol.Type protocol_type = 7;
  Protocol.Role role = 8;
  string PID = 9;

  message IssuePropose {
    string cred_def_id = 2;
    string values_json = 3;
  }
  message ProofVerify {
    message Attr {
      string value = 1;
      string name = 2;
      string cred_def_id = 3;
      string predicate = 4;
    }
    repeated Attr attrs = 1;
  }
  oneof Question {
    IssuePropose issue_propose = 10;
    ProofVerify proof_verify = 11;
  }
}
